[gd_scene load_steps=2 format=3 uid="uid://cbxgrgna0u7kq"]

[ext_resource type="Script" uid="uid://du37j64lxqhsg" path="res://scripts/Start.gd" id="1_8t08e"]

[node name="Start" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8t08e")

[node name="PlayButton" type="Button" parent="."]
custom_minimum_size = Vector2(200, 50)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.5
offset_top = -15.5
offset_right = 20.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "Play"

[node name="LevelSelectButton" type="Button" parent="."]
custom_minimum_size = Vector2(200, 50)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 37.0
offset_right = 100.0
offset_bottom = 87.0
grow_horizontal = 2
grow_vertical = 2
text = "Selection de niveau"

[node name="InstructionsButton" type="Button" parent="."]
custom_minimum_size = Vector2(200, 50)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 90.0
offset_right = 100.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2
text = "Instructions"

[node name="ConfigurationButton" type="Button" parent="."]
custom_minimum_size = Vector2(200, 50)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 143.0
offset_right = 100.0
offset_bottom = 193.0
grow_horizontal = 2
grow_vertical = 2
text = "Configuration"

[node name="QuitButton" type="Button" parent="."]
custom_minimum_size = Vector2(200, 50)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 196.0
offset_right = 100.0
offset_bottom = 246.0
grow_horizontal = 2
grow_vertical = 2
text = "Quitter"
